--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <section id="about">
     <h2>About Science Chatbot</h2>
-    <p>This chatbot is designed to help answer questions related to physics, biology, and chemistry. Please feel free to support me through this account number 11575884543.</p>
+    <p>This chatbot is designed to help answer questions related to physics, biology, and chemistry.</p>
 </section>
 
 </body>
