--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 { pattern: /spiderman video/i, response: '<video width="320" height="240" controls><source src="pexels-marc-espejo-9228228 (1080p).mp4" type="video/mp4">Your browser does not support the video tag.</video>' },
                 { pattern: /diagram of the heart/i, response: '<img src="heart.png" alt="Your Picture" width="320" height="240">' },
                 { pattern: /Zinc Oxide is a/i, response: 'Amphoteric Oxide' },
-                { pattern: /diagram of the respiratory system/i, response: '<img src="respiratory system.webp" alt="Your Picture" width="320" height="240">' },
+                { pattern: /diagram of the respiratory system/i, response: '<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.researchgate.net%2Ffigure%2FSketch-of-respiratory-system_fig1_320901065&psig=AOvVaw1GpXL5mL5Ia-ggwQb_sxak&ust=1699781722000000&source=images&cd=vfe&ved=0CBIQjRxqFwoTCNCv78LSu4IDFQAAAAAdAAAAABAE" alt="Respiratory System Diagram" width="320" height="240">' },
+
                 { pattern: /diagram of the lungs/i, response: '<img src="lungs.png" alt="Your Picture" width="320" height="240">' },
                 // Add more rules as needed
             ];
