--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 { pattern: /spiderman video/i, response: '<video width="320" height="240" controls><source src="pexels-marc-espejo-9228228 (1080p).mp4" type="video/mp4">Your browser does not support the video tag.</video>' },
                 { pattern: /diagram of the heart/i, response: '<img src="heart.png" alt="Your Picture" width="320" height="240">' },
                 { pattern: /Zinc Oxide is a/i, response: 'Amphoteric Oxide' },
-                 { pattern: /diagram of the lungs/i, response: '<img src="respiratory system.webp" alt="Your Picture" width="320" height="240">' },
+                 { pattern: /diagram of the respiratory system/i, response: '<img src="https://github.com/2s3k4/2s3k4.github.io/blob/b6f7a9058e540187b0fbd9477d34a16930068dba/respiratory%20system.webp" alt="Your Picture" width="320" height="240">' },
 
                 { pattern: /diagram of the lungs/i, response: '<img src="lungs.png" alt="Your Picture" width="320" height="240">' },
                 // Add more rules as needed
