--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
                 { pattern: /chemistry/i, response: 'Chemistry is the branch of science that deals with the properties, composition, and behavior of matter.' },
                 { pattern: /test tube/i, response: 'The inner diameter of a test tube can be measured accurately using a pair of vernier calipers.' },
                 { pattern: /spiderman video/i, response: '<video width="320" height="240" controls><source src="pexels-marc-espejo-9228228 (1080p).mp4" type="video/mp4">Your browser does not support the video tag.</video>' },
-                { pattern: /diagram of the heart/i, response: '<img src="heart.png" alt="Your Picture" width="320" height="240">' },
+                { pattern: /diagram/i, response: '<img src="heart.png" alt="There was an error loading your request please view it on another source" width="320" height="240">' },
                 { pattern: /Zinc Oxide is a/i, response: 'Amphoteric Oxide' },
-                 { pattern: /diagram of the respiratory system/i, response: '<img src="respiratory system.webp" alt="Your Picture" width="320" height="240">' },
+                 { pattern: /diagram of the respiratory system/i, response: '<img src="respiratory system.webp" alt="Please view it on another source" width="320" height="240">' },
 
                 { pattern: /diagram of the lungs/i, response: '<img src="lungs.png" alt="Your Picture" width="320" height="240">' },
+                { pattern: /Noun/i, response: 'A noun ia a name of a person, animal, place or thing' },
+                { pattern: /Verb/i, response: 'A verb is an action word' },
+                
                 // Add more rules as needed
             ];
 
