--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                  { pattern: /diagram of the respiratory system/i, response: '<img src="respiratory system.webp" alt="Please view it on another source" width="320" height="240">' },
 
                 { pattern: /diagram of the lungs/i, response: '<img src="lungs.png" alt="Your Picture" width="320" height="240">' },
-                { pattern: /Noun/i, response: 'A noun ia a name of a person, animal, place or thing' },
-                { pattern: /Verb/i, response: 'A verb is an action word' },
+                { pattern: /Meaning of a Noun/i, response: 'A noun ia a name of a person, animal, place or thing' },
+                { pattern: /Meaning of a Verb/i, response: 'A verb is an action word' },
                 
                 // Add more rules as needed
             ];
