--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 { pattern: /Zinc Oxide is a/i, response: 'Amphoteric Oxide' },
                  { pattern: /diagram of the respiratory system/i, response: '<img src="respiratory system.webp" alt="Please view it on another source" width="320" height="240">' },
 
-                { pattern: /diagram of the lungs/i, response: '<img src="download.jpeg" alt="Your Picture" width="320" height="240">' },
+                { pattern: /diagram of the lungs/i, response: '<img src="bridge.png" alt="Your Picture" width="320" height="240">' },
                 { pattern: /Meaning of a Noun/i, response: 'A noun ia a name of a person, animal, place or thing' },
                 { pattern: /Meaning of a Verb/i, response: 'A verb is an action word' },
                 
