--- a/index.html
+++ b/index.html
@@ -557,4 +557,68 @@ window.onload = function() {
 };
 
 // Timer logic
-functi
+  <!-- ...rest of your code above... -->
+
+// Timer logic
+function startTimer() {
+  state.timer = 60;
+  updateTimerDisplay();
+  state.timerInterval = setInterval(() => {
+    state.timer--;
+    updateTimerDisplay();
+    if (state.timer <= 0) {
+      stopTimer();
+      autoNextDueToTimeout();
+    }
+  }, 1000);
+}
+
+function stopTimer() {
+  if (state.timerInterval) {
+    clearInterval(state.timerInterval);
+    state.timerInterval = null;
+  }
+}
+
+function resetTimer() {
+  stopTimer();
+  state.timer = 60;
+  updateTimerDisplay();
+}
+
+function updateTimerDisplay() {
+  const timerSpan = document.getElementById("timer");
+  if (timerSpan) {
+    timerSpan.innerText = `Time left: ${state.timer}s`;
+    if (state.timer <= 10) {
+      timerSpan.style.color = "#d40000";
+    } else {
+      timerSpan.style.color = "";
+    }
+  }
+}
+
+function autoNextDueToTimeout() {
+  // Mark as unanswered or wrong, go to next question
+  let q = state.questions[state.currentQ];
+  state.answered.push({
+    answer: null,
+    correct: q.correct,
+    question: q.question,
+    explanation: q.explanation || "",
+    usedHint: state.hintUsed
+  });
+  state.currentQ++;
+  saveProgress();
+  if (state.currentQ < QUESTIONS_PER_DAY) {
+    showQuestion();
+  } else {
+    updateBadges();
+    updateStreak();
+    savePerformance(state.username, state.today, state.score);
+    saveLeaderboard(state.username, state.score);
+    saveProgress();
+    showDone();
+  }
+}
+</script>
