--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <h2>About This Platform</h2>
     <p>
       <strong>Daily Quiz</strong> helps you learn and improve every day in a fun and engaging way.<br>
-      Enjoy daily quizzes, track your progress, earn badges, and keep learning!
+      Enjoy daily quizzes, track your progress, earn badges, and keep learning! Created by David Ime James.
     </p>
     <button id="closeAboutBtn" class="btn">Close</button>
   </div>
